--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@
     background-color: var(--clr-primary);
     color: var(--clr-light);
     display: grid;
-    grid: "header header header header" auto "...... lists  active ......" auto/1fr minmax(100px, 300px) minmax(250px, 500px) 1fr;
+    grid: "header header header header" auto 
+          "...... lists  active ......" auto/
+          1fr minmax(100px, 300px) minmax(250px, 500px) 1fr;
   }
   
   .title {
